--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ color: white;
   }
 
 
-  .lin {
+  .lin{
     font-size: 22px;
     color: #e77e06;
     position: relative;
@@ -456,22 +456,16 @@ a {
   color: inherit;
   text-decoration: none; 
 }
-@media (max-width: 575.98px) { 
-  .name10 {
-    font-size: 1rem;
-  
-  }
-  #text{
 
-  top: 38%;
-
-
-  }
-}
 
 
 @media (max-width: 767.98px)
  {
+  .img-fld {margin-left: 0.5rem;
+    max-width: 110px;}
+    .navbar-toggler-icon span{
+      font-size: 26px;
+    }
 #pic{
   display: flex;
   justify-content: center;
@@ -481,11 +475,11 @@ a {
 z-index: 2;
 }
 #text{
-  position: absolute;
-top: 60%;
-left: 50%;
-transform: translate(-50%, -100%);
-z-index: 4;
+    position: absolute;
+    top: 30rem;
+    left: 50%;
+    transform: translate(-50%, -4rem);
+    z-index: 4;
 }
 .name10 {
   font-size: 2rem;
@@ -495,7 +489,15 @@ z-index: 4;
 
 
   }
-
+  @media (max-width: 575.98px) { 
+    .name10 {
+      font-size: 1rem;
+    
+    }
+    #text{
+      top: 24rem;
+  }
+  }
 
 @media (max-width: 991.98px) {
   .name10 {
@@ -589,7 +591,8 @@ margin: auto;
   bottom: -19px;
   left: 84%;
   background-color: transparent;
-  transition: all 2s;
+  transition: all 3s;
+  z-index: 5;
 }
 
 #showButton {
@@ -618,3 +621,133 @@ font-size: 40px;
 #copied-message{
   transition: all 0.4s;
 }
+@media (max-width: 476px) { 
+
+  .bg1 {
+
+    background-image: url(img/mobile-screen.jpeg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: contain;
+   
+
+  }
+  .btn-m {
+    border: none;
+    padding: 0.8rem 1rem;
+    background-color: transparent;
+    font-size: 15px;
+    outline: 2px solid #e77e06;
+    color: #e77e06;
+    font-weight: bold;
+    transition: all 0.5s;
+    border-radius: 10px;
+  }
+  .btn-m:hover {
+    outline: none;
+    background-color: #e77e06;
+    color: white;
+
+    box-shadow: -2px -2px 10px #f3bb01, 4px 2px 10px #e7be06;
+  }
+  .name {
+    font-size: 3.3rem;
+
+  }
+  .linc{
+    font-size: 20px;
+  }
+  
+  .linc::before {
+    left: -4px;
+    width: 25%;
+  }
+
+  .linc::after {
+    width: 25%;
+  }
+  
+  .lin5 {
+    font-size: 20px;   
+  }
+  
+  .lin5::before {
+    width: 25%;
+    left: -5px;
+  }
+  
+  .lin5::after {
+    width: 25%;
+    left: 210px;
+   }
+   .lin4 {
+    font-size: 20px;
+  }
+
+  .lin4::before {
+   width: 20%;
+  }
+
+  .lin4::after {
+    width: 20%;
+    left: 222px;
+  }
+  .lin{
+    font-size: 20px;
+  }
+
+  .lin::before {
+    width: 27%; 
+  }
+
+  .lin::after {
+    width: 27%;
+    left: 179px;
+    right: 0px;
+  }
+  .linsk {
+    font-size: 20px;
+  }
+
+  .linsk::before {
+
+    width: 20%;
+  
+    left: 0px;
+    top: 11px;
+    right: 0px;
+
+  }
+
+  .linsk::after {
+   width: 20%;
+  left: 183px;
+  }
+  .p-ss{font-size: 15px;}
+  #text{
+    top: 23rem;
+
+}
+
+ }
+ @media (min-width: 576px) { 
+
+  .p-s{font-size: 16px;}
+
+ }
+
+@media (min-width: 768px) { 
+  
+  .p-m{font-size: 18px;}
+  .name {
+    font-size: 4rem;
+
+  }
+ }
+
+
+@media (min-width: 992px) { 
+  .p-l{font-size: 20px;}
+
+ }
+
